# kickstart-napi-rs

./: .gitattributes  .oxfmtrc.jsonc  AGENTS.md  Cargo.toml  README.md  index.js  package.json  tsconfig.json  vitest.config.ts
.github/: renovate.json
.github/workflows/: CI.yml
.husky/: pre-commit
benchmark/: plus-100.bench.ts
tests/: plus-100.test.ts
