
[package]
authors = ["Mon Albert Gamil <mrgamilmonalbert@gmail.com>"]
edition = "2024"
name    = "kickstart-napi-rs"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto           = true
strip         = "symbols"
